--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <h1>Feliz Navidad!!!</h1>
     <div class="tree">
-        <div class="star">
-           
-        </div>
+        <div class="star"></div>
+        <div class="tree__triangulo"></div>
+        <div class="tree__triangulo"></div>
+        <div class="tree__triangulo"></div>
+        <div class="tree__tronco"></div>
+
+        <div class="orbs orbs--1"></div>
+        <div class="orbs orbs--2"></div>
+        <div class="orbs orbs--3"></div>
+        <div class="orbs orbs--4"></div>
     </div>
 </body>
 </html>
-
