--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 </head>
 <body>
     <h1>Feliz Navidad!!!</h1>
+    
+    <div class="shooting_star">        
+        <div class="shooting_star">
+            ⭑
+        </div>
+        <div class="shooting_star">
+            ⭒
+        </div>
+        <div class="shooting_star">
+            ⭑
+        </div>
+        <div class="shooting_star">
+            ⭒
+        </div>
+        <div class="shooting_star">
+            ⭑
+        </div>
+        <div class="shooting_star">
+            ⭒
+        </div>
+    </div>
+
     <div class="tree">
         <div class="star"></div>
         <div class="tree__triangulo"></div>
